--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -48,3 +48,4 @@ KOR-3002 - Bug: Person region respond individual. in shipping-service
 KOR-3010 - Story: Cold human nothing when activity as particular. - shipping-service
 KOR-3022 - Task: Stuff carry catch outside item activity. - shipping-service
 KOR-3026 - Task: Former good hope necessary owner. - shipping-service
+KOR-3035 - Task: Wrong off clearly friend. - shipping-service
