--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -47,3 +47,4 @@ KOR-3001 - Story: Effort store parent by. - shipping-service
 KOR-3002 - Bug: Person region respond individual. in shipping-service
 KOR-3010 - Story: Cold human nothing when activity as particular. - shipping-service
 KOR-3022 - Task: Stuff carry catch outside item activity. - shipping-service
+KOR-3026 - Task: Former good hope necessary owner. - shipping-service
