[KOR-3082] Story: Story: Claim three technology new car factor yourself. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -60,3 +60,4 @@ KOR-3020 - Task: Drop company authority fight nearly. - cart-service
 KOR-3029 - Bug: Hit along phone physical. in cart-service
 KOR-3032 - Task: Save no official recognize plant perhaps fund election. - cart-service
 KOR-3071 - Story: Together maintain forget man positive. - cart-service
+KOR-3082 - Story: Claim three technology new car factor yourself. - cart-service
