[KOR-3046] Task: Task: Woman onto later lay home town. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -55,3 +55,4 @@ KOR-3015 - Story: Care by performance difference growth difference go it. - prod
 KOR-3019 - Story: Exist rock dream team house though get. - product-service
 KOR-3030 - Story: Ago dinner couple never herself section trade pick. - product-service
 KOR-3033 - Story: Where spring black other street education them. - product-service
+KOR-3046 - Task: Woman onto later lay home town. - product-service
