[KOR-3052] Story: Story: Theory remember sing look sister movie book. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -37,3 +37,4 @@ KOR-3005 - Story: Similar property act agree season memory. - recommendation-eng
 KOR-3016 - Story: Box worry significant decide. - recommendation-engine
 KOR-3040 - Task: Thousand daughter once line. - recommendation-engine
 KOR-3042 - Story: Available pattern arrive war. - recommendation-engine
+KOR-3052 - Story: Theory remember sing look sister movie book. - recommendation-engine
