--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -34,3 +34,4 @@ KOR-2968 - Task: Man body like whole husband image. - payment-service
 KOR-2971 - Task: Consider war generation. - payment-service
 KOR-2977 - Task: My teacher site analysis. - payment-service
 KOR-2983 - Story: Often whether baby discover value rise close. - payment-service
+KOR-3003 - Story: Even doctor others customer into. - payment-service
