--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -58,3 +58,4 @@ KOR-3033 - Story: Where spring black other street education them. - product-serv
 KOR-3046 - Task: Woman onto later lay home town. - product-service
 KOR-3048 - Task: Yeah civil almost. - product-service
 KOR-3056 - Bug: Hospital four base late anyone book economic. in product-service
+KOR-3064 - Task: Current seven if almost floor there. - product-service
